changing colors index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <title>Underage Checker</title>
     <style>
         body {
-            background-color: #f0f0f0; /* Background color */
+            background-color: olive; /* Background color */
             text-align: center;
         }
         h1 {
-            color: #3498db; /* Title color */
+            color: skyblue; /* Title color */
         }
     </style>
 </head>
