grey background index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Underage Checker</title>
     <style>
         body {
-            background-color: light green; /* Background color */
+            background-color: grey; /* Background color */
             text-align: center;
         }
         h1 {
